--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.hikari.connection-timeout=30000
 
 # Encoding Setting
 server.servlet.encoding.force-response=true
+
+# Profile Setting
+spring.profiles.include=oauth
