Chore: update logging configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ server.servlet.encoding.force-response=true
 
 # Profile Setting
 spring.profiles.include=oauth
+
+# Log Level Setting
+logging.level.org.springframework=info
+logging.level.com.review.paper-review=debug
+logging.level.org.springframework.security=trace
