--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.profiles.include=oauth
 logging.level.org.springframework=info
 logging.level.com.review.paper-review=debug
 logging.level.org.springframework.security=trace
+
+# Swagger-ui custom path
+springdoc.swagger-ui.path=/api-docs/swagger-ui.html
+
